nodejs/versioned_docs/version-1.17-rc.1/api/class-tracing.mdx
---
id: class-tracing
title: "Tracing"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

API for collecting and saving Playwright traces. Playwright traces can be opened in [Trace Viewer](./trace-viewer.mdx) after Playwright script runs.

Start recording a trace before performing actions. At the end, stop tracing and save it to a file.

```js
const browser = await chromium.launch();
const context = await browser.newContext();
await context.tracing.start({ screenshots: true, snapshots: true });
const page = await context.newPage();
await page.goto('https://playwright.dev');
await context.tracing.stop({ path: 'trace.zip' });
```


- [tracing.start([options])](./api/class-tracing.mdx#tracing-start)
- [tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk)
- [tracing.stop([options])](./api/class-tracing.mdx#tracing-stop)
- [tracing.stopChunk([options])](./api/class-tracing.mdx#tracing-stop-chunk)

## tracing.start([options]) {#tracing-start}
- `options` &#60;[Object]&#62;
  - `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-name"/> &#60;[string]&#62; If specified, the trace is going to be saved into the file with the given name inside the `tracesDir` folder specified in [browserType.launch([options])](./api/class-browsertype.mdx#browser-type-launch).<a href="#tracing-start-option-name" class="list-anchor">#</a>
  - `screenshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-screenshots"/> &#60;[boolean]&#62; Whether to capture screenshots during tracing. Screenshots are used to build a timeline preview.<a href="#tracing-start-option-screenshots" class="list-anchor">#</a>
  - `snapshots`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-snapshots"/> &#60;[boolean]&#62; Whether to capture DOM snapshot on every action.<a href="#tracing-start-option-snapshots" class="list-anchor">#</a>
  - `sources`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-sources"/> &#60;[boolean]&#62; Whether to include source files for trace actions.<a href="#tracing-start-option-sources" class="list-anchor">#</a>
  - `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-option-title"/> &#60;[string]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-return"/> &#60;[Promise]<[void]>&#62;<a href="#tracing-start-return" class="list-anchor">#</a>

Start tracing.

```js
await context.tracing.start({ screenshots: true, snapshots: true });
const page = await context.newPage();
await page.goto('https://playwright.dev');
await context.tracing.stop({ path: 'trace.zip' });
```

## tracing.startChunk([options]) {#tracing-start-chunk}
- `options` &#60;[Object]&#62;
  - `title`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-option-title"/> &#60;[string]&#62; Trace name to be shown in the Trace Viewer.<a href="#tracing-start-chunk-option-title" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-start-chunk-return"/> &#60;[Promise]<[void]>&#62;<a href="#tracing-start-chunk-return" class="list-anchor">#</a>

Start a new trace chunk. If you'd like to record multiple traces on the same [BrowserContext], use [tracing.start([options])](./api/class-tracing.mdx#tracing-start) once, and then create multiple trace chunks with [tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) and [tracing.stopChunk([options])](./api/class-tracing.mdx#tracing-stop-chunk).

```js
await context.tracing.start({ screenshots: true, snapshots: true });
const page = await context.newPage();
await page.goto('https://playwright.dev');

await context.tracing.startChunk();
await page.click('text=Get Started');
// Everything between startChunk and stopChunk will be recorded in the trace.
await context.tracing.stopChunk({ path: 'trace1.zip' });

await context.tracing.startChunk();
await page.goto('http://example.com');
// Save a second trace file with different actions.
await context.tracing.stopChunk({ path: 'trace2.zip' });
```

## tracing.stop([options]) {#tracing-stop}
- `options` &#60;[Object]&#62;
  - `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-option-path"/> &#60;[string]&#62; Export trace into the file with the given path.<a href="#tracing-stop-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-return"/> &#60;[Promise]<[void]>&#62;<a href="#tracing-stop-return" class="list-anchor">#</a>

Stop tracing.

## tracing.stopChunk([options]) {#tracing-stop-chunk}
- `options` &#60;[Object]&#62;
  - `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-option-path"/> &#60;[string]&#62; Export trace collected since the last [tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) call into the file with the given path.<a href="#tracing-stop-chunk-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="tracing-stop-chunk-return"/> &#60;[Promise]<[void]>&#62;<a href="#tracing-stop-chunk-return" class="list-anchor">#</a>

Stop the trace chunk. See [tracing.startChunk([options])](./api/class-tracing.mdx#tracing-start-chunk) for more details about multiple trace chunks.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
